--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "classnames": "^2.2.5",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0"
+    "react-router-dom": "^4.0.0",
+    "react-typist": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
