--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
-    "react-typist": "^1.1.0"
+    "react-typist": "^1.1.0",
+    "@haiku/thevisual-text": "latest"
   },
   "scripts": {
     "start": "react-scripts start",
