--- a/package.json
+++ b/package.json
@@ -6,12 +6,13 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "@haiku/thevisual-text": "latest",
     "classnames": "^2.2.5",
+    "is-mobile": "^0.2.2",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "react-router-dom": "^4.0.0",
-    "react-typist": "^1.1.0",
-    "@haiku/thevisual-text": "latest"
+    "react-typist": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
