Apache config changes supporting Let's Encrypt.

--- a/thevisual.conf
+++ b/thevisual.conf
@@ -12,6 +12,11 @@ DocumentRoot    /var/www/html
     <Directory /var/www/html>
         AllowOverride   All
     </Directory>
+    
+    # Redirect all HTTP traffic to HTTPS
+    RewriteEngine on
+    RewriteCond %{SERVER_NAME} =thevisual.work
+    RewriteRule ^ https://%{SERVER_NAME}%{REQUEST_URI} [END,NE,R=permanent]
 </VirtualHost>
 
 <IfModule mod_ssl.c>
@@ -36,8 +41,8 @@ DocumentRoot    /var/www/html
             SSLOptions      +StdEnvVars
         </Directory>
     
-        SSLCertificateFile      /etc/ssl/certs/thevisual.crt
-        SSLCertificateKeyFile   /etc/ssl/private/thevisual.key
+        SSLCertificateFile      /etc/letsencrypt/live/thevisual.work/fullchain.pem
+        SSLCertificateKeyFile   /etc/letsencrypt/live/thevisual.work/privkey.pem
     
         BrowserMatch "MSIE [2-6]" \
                        nokeepalive ssl-unclean-shutdown \
