--- a/ssl-params.conf
+++ b/ssl-params.conf
@@ -4,8 +4,11 @@
     Header              always set Strict-Transport-Security "max-age=63072000; includeSubdomains"
     Header              always set X-Frame-Options DENY
     Header              always set X-Content-Type-Options nosniff
+    SSLOptions          +StrictRequire
     SSLCompression      off
     SSLSessionTickets   Off
     SSLUseStapling      on
     SSLStaplingCache    "shmcb:logs/stapling-cache(150000)"
     SSLOpenSSLConfCmd   DHParameters "/etc/ssl/certs/dhparam.pem"
+    LogFormat "%h %l %u %t \"%r\" %>s %b \"%{Referer}i\" \"%{User-agent}i\"" vhost_combined
+    LogFormat "%v %h %l %u %t \"%r\" %>s %b" vhost_common
