Add environment variable for dev/production.

--- a/thevisual.conf
+++ b/thevisual.conf
@@ -1,6 +1,13 @@
 ServerName      thevisual.work
 DocumentRoot    /var/www/html
 
+<If "%{HTTP_HOST} == 'thevisual.work'">
+    SetEnv          ENVIRONMENT_TYPE    "production"
+</If>
+<Else>
+    SetEnv          ENVIRONMENT_TYPE    "development"
+</Else>
+
 <VirtualHost *:80>
     ServerName      thevisual.work
     ServerAdmin     jeff@thevisual.work
