Massive enhancement of the server-side tools we've been using for the site.
- Restructure repository to move tools into subfolder.
- Upgrade README.md with info from Build.md, providing more content and instructions on how to deploy the site from scratch on a new VM.
- Add install script for a fresh Ubuntu Server 17.10 virtual machine.
- Add install script for a fresh Ubuntu Server 18.04 virtual machine.
- Switch off pushstate-server and onto Apache for deployment, and reflect this in the deploy script (previously the 'reboot' script).
- Add new init script to handle server reboots, and update it with the new Apache-based setup.
- Add SSL support, including Let's Encrypt cli support as well as certificate symlinks.
- Add more comments.
- Add TODO markdown list to keep track of backend next steps.

--- a/server/ssl-params.conf
+++ b/server/ssl-params.conf
@@ -1,3 +1,15 @@
+## ssl-params.conf 1.0
+## Spencer Wohlers
+
+## This document contains the Apache server directives for running the site in
+## its most secure fashion for SSL negotiation.
+
+## This document requires Apache 2.4 or above.
+
+## With thanks to https://www.digitalocean.com/community/tutorials/
+## how-to-create-a-self-signed-ssl-certificate-for-apache-in-ubuntu-16-04
+## and others.
+
 SSLCipherSuite      EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
 SSLProtocol         All -SSLv2 -SSLv3
 SSLHonorCipherOrder On
