--- a/server/thevisual.conf
+++ b/server/thevisual.conf
@@ -1,8 +1,18 @@
+## thevisual.conf 1.0
+## Spencer Wohlers
+
+## This document contains the Apache server directives for running the site
+## under default configurations. Modify this at your own risk.
+
+## This document requires Apache 2.4 or above. HTTP/2 support requires
+## Apache 2.4.29 or above.
+
 ServerName      thevisual.work
 DocumentRoot    /var/www/html
 
 <If "%{HTTP_HOST} == 'thevisual.work'">
     SetEnv          ENVIRONMENT_TYPE    "production"
+    ServerTokens    Prod
 </If>
 <Else>
     SetEnv          ENVIRONMENT_TYPE    "development"
