--- a/server/ssl-params.conf
+++ b/server/ssl-params.conf
@@ -14,8 +14,8 @@ SSLCipherSuite      EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH
 SSLProtocol         All -SSLv2 -SSLv3
 SSLHonorCipherOrder On
 Header              always set Strict-Transport-Security "max-age=63072000; includeSubdomains"
-Header              always set X-Frame-Options DENY
-Header              always set X-Content-Type-Options nosniff
+# Header            always set X-Frame-Options DENY
+# Header            always set X-Content-Type-Options nosniff
 SSLOptions          +StrictRequire
 SSLCompression      off
 SSLSessionTickets   Off
