--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "react-scripts": "0.9.0"
   },
   "dependencies": {
+    "@haiku/thev1sual-newtongue": "0.0.6",
     "@haiku/thevisual-text": "latest",
     "classnames": "^2.2.5",
     "is-mobile": "^0.2.2",
