--- a/package.json
+++ b/package.json
@@ -8,12 +8,13 @@
   "dependencies": {
     "@haiku/thev1sual-newtongue": "0.0.6",
     "@haiku/thevisual-text": "latest",
-    "classnames": "^2.2.5",
-    "is-mobile": "^0.2.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-router-dom": "^4.0.0",
-    "react-typist": "^1.1.0"
+    "classnames": "2.2.5",
+    "is-mobile": "0.2.2",
+    "lodash": "4.17.11",
+    "react": "15.4.2",
+    "react-dom": "15.4.2",
+    "react-router-dom": "4.0.0",
+    "react-typist": "1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
